# Hadirin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  halo.php  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: install-macos.md  release-notes-v0.1.10.md  release-notes-v0.1.11.md  release-notes-v0.1.12.md  release-notes-v0.1.13.md  release-notes-v0.1.18.md  release-notes-v0.1.19.md  release-notes-v0.1.20.md  release-notes-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.6.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md  release-notes-v0.1.9.md  release-notes-v0.2.0.md
docs/superpowers/plans/: 2026-05-31-absen-kelas-desktop.md
docs/superpowers/specs/: 2026-05-31-absen-kelas-desktop-design.md
src/: App.tsx  styles.css
src-faris/: Cargo.toml  tauri.conf.json
src-faris/capabilities/: default.json
src-faris/icons/: icon.icns
src-faris/src/: lib.rs  main.rs
src/lib/: attendance.test.ts  attendance.ts  dates.ts  excel.ts  ids.ts  seed.ts  status.ts  storage-info.test.ts  storage.ts  types.ts
