[package]
name = "absen-kelas"
version = "0.1.13"
description = "Aplikasi desktop offline untuk input dan rekap absensi siswa."
authors = ["Absen Kelas Maintainers"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
