[package]
name = "hadirin"
version = "0.1.20"
description = "Aplikasi desktop offline untuk input dan rekap absensi siswa."
authors = ["Alfarisi Azmir (farhsvvn) <https://alfarisiazmir.my.id>"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "hadirin"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
